--- a/index.html
+++ b/index.html
@@ -11,6 +11,35 @@
             crossorigin="anonymous">
 </head>
 <body>
+    <div class="container">
+        <h4 class="text-center">Carrito de Compra</h4>
+        <div class="Contenido">
+        <div class="Compras">
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th scope="col">#</th>
+                        <th scope="col">Item</th>
+                        <th scope="col">Cantidad</th>
+                        <th scope="col">Acciones</th>
+                        <th scope="col">Total</th>
+                    </tr>
+                </thead>
+                <tbody id="items"></tbody>
+                <tfoot>
+                    <tr id="footer">
+                        <th scope="row" colspan="5">
+                            Carrito Vacio - Compra Ya!!!
+                        </th>
+                    </tr>
+                </tfoot>
+            </table>
+        </div>
+        <div class="productos"></div>
+            <h4 class="text-center">Productos</h4>
+            <div class="row" id="cards"></div>
+        </div>
+    </div>
     <script src="./js/app.js"></script>
 </body>
 </html>
