--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
             rel="stylesheet" 
             integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" 
             crossorigin="anonymous">
+    <link rel="stylesheet" href="./css/index.css">
 </head>
 <body>
     <div class="container">
-        <h4 class="text-center">Carrito de Compra</h4>
+        <h4 class="text-center">Carrito de Compras</h4>
         <div class="Contenido">
         <div class="Compras">
             <table class="table">
@@ -35,11 +36,59 @@
                 </tfoot>
             </table>
         </div>
-        <div class="productos"></div>
+        <div class="Productos">
             <h4 class="text-center">Productos</h4>
-            <div class="row" id="cards"></div>
+            <div class="row" id="cards"></div> 
         </div>
     </div>
+
+    <template id="template-footer">
+        <th scope="row" colspan="2">
+            Total Productos
+        </th>
+        <td>10</td>1
+        <td>
+            <button class="btn btn-danger btn-sm"
+                    id="vaciar-carrito">
+            Vaciar Carrito
+            </button>
+        </td>
+        <td class="font-weight-bold">
+            $ <span>5000</span>
+        </td>
+    </template>
+
+    <template id="template-carrito">
+        <tr>
+            <th scope="row">id</th>
+            <td>Café</td>
+            <td>1</td>
+            <td>
+                <button class="btn btn-sucess btn-sm">+</button>
+                |
+                <button class="btn btn-danger btn-sm">-</button>
+            </td>
+            <td>
+                $ <span>500</span>
+            </td>
+        </tr>
+    </template>
+
+    <template id="template-card">
+        <div class="col-12 col-md-6 mb-2">
+            <div class="card">
+                <img src="" alt="" srcset="" class="card-img-top">
+                <div class="card-body">
+                    <h5>Titulo</h5>
+                    <p>Precio</p>
+                    <button class="btn btn-dark">
+                        Comprar
+                    </button>
+                </div>
+            </div>
+        </div>
+    </template>
+
     <script src="./js/app.js"></script>
 </body>
 </html>
